--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -43,6 +44,6 @@
   },
   "devDependencies": {
     "sass": "^1.62.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.4.1"
   }
 }
